--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-...
+<!DOCTYPE html> <!--HTML 5-té teszi a dokumentumot--> 
+<html lang="hu"> <!--ez tartalmazza az egész HTML dokumentumot és itt állítható be a nyelv magyarra-->
+<head> <!--a böngészőnek ad utasításokat-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title> <!--böngésző fülön megjelenő név-->
+</head>
+<body>
+     <h1>Horváth Levente</h1>
+     <h2>Horváth Levente</h2> 
+     <h3>Horváth Levente</h3> 
+     <h4>Horváth Levente</h4> 
+     <h5>Horváth Levente</h5> 
+     <h6>Horváth Levente</h6>   
+     <img src="" alt=""> <!--képet lehet beilleszteni vele--> 
+</body> <!--felhasználó ad információkat-->
+</html>
